// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getButton matches snapshot 1`] = `
<span class="dismiss" data-testid="dismiss-button">
  ✕
</span>
`;

exports[`utils getHeadline matches snapshot if a headline is provided 1`] = `
<h4 data-testid="headline">
  Mock Headline
</h4>
`;

exports[`utils getIcon type error matches snapshot 1`] = `
<span class="icon" data-testid="notify-icon">
  <span class="error">
    ╲
  </span>
</span>
`;

exports[`utils getIcon type info matches snapshot 1`] = `
<span class="icon" data-testid="notify-icon">
  i
</span>
`;

exports[`utils getIcon type success matches snapshot 1`] = `
<span class="icon" data-testid="notify-icon">
  <span>
    ✓
  </span>
</span>
`;

exports[`utils getIcon type warning matches snapshot 1`] = `
<span class="icon" data-testid="notify-icon">
  !
</span>
`;
